--- a/harshchat/src/.env
+++ b/harshchat/src/.env
@@ -1,2 +1,2 @@
-# REACT_APP_SOCKET_URL=http://localhost:8080
+# REACT_APP_SOCKET_URL=https://backend.chatherr.com/
 # REACT_APP_SOCKET_URL=https://localhost:8080
